# esp32_iot_gateway

./: .gitignore  CMakeLists.txt  diagram.json  sdkconfig  wokwi.toml
docs/: 01_Project_Overview.md  02_Features.md  03_System_Architecture.md  04_Prerequisites.md  05_Installation_Guide.md  06_Project_Structure.md  07_MQTT_Communication.md  08_Data_Flow.md  09_Testing_And_Simulation.md
docs/diagrams/: 01_block_architecture.puml  02_sequence_data_publish.puml  03_sequence_command_flow.puml  drawio_architecture.drawio
main/: CMakeLists.txt  Kconfig  app_main.c
main/actuators/: actuators.c  actuators.h
main/mqtt/: mqtt.c  mqtt.h
main/payload/: payload.c  payload.h
main/protocols/: can_bus.c  can_bus.h  i2c_bus.c  i2c_bus.h  spi_bus.c  spi_bus.h  uart_bus.c  uart_bus.h
main/sensors/: sensors.c  sensors.h
main/wifi/: wifi.c  wifi.h
test/: CMakeLists.txt  test_actuators.c  test_mqtt.c  test_negative.c  test_payload.c  test_protocols.c  test_sensors.c
